--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <link rel="stylesheet" href="style.css">
 <p>this is a new Repo</p>
 
-<p>This is new Feature1</p>
+<p>This is new Feature1 (button)</p>
